--- a/readme.html
+++ b/readme.html
@@ -15,7 +15,7 @@
     <script src="_static/language_data.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="sphinx" href="test-md.html" />
+    <link rel="next" title="sample file" href="test-md.html" />
     <link rel="prev" title="Welcome to sphinx-markdown’s documentation!" href="index.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -743,7 +743,7 @@ freshness</a>).</p>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="index.html" title="previous chapter">Welcome to sphinx-markdown’s documentation!</a></li>
-      <li>Next: <a href="test-md.html" title="next chapter">sphinx</a></li>
+      <li>Next: <a href="test-md.html" title="next chapter">sample file</a></li>
   </ul></li>
 </ul>
 </div>
